--- a/JAV/actressDatas.html
+++ b/JAV/actressDatas.html
@@ -188,6 +188,15 @@
     .gallery { grid-template-columns: repeat(auto-fill, minmax(120px,1fr)); }
     .related-dramas .grid { grid-template-columns: repeat(auto-fill, minmax(120px,1fr)); }
   }
+  
+	/* 固定 header */
+	#header-placeholder {
+	  position: fixed;
+	  top: 0;
+	  left: 0;
+	  width: 100%;
+	  z-index: 999;
+	}
 </style>
 </head>
 <body>
