--- a/GirlPhoto/comicDetails.html
+++ b/GirlPhoto/comicDetails.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>漫画阅读 - 无限缩放</title>
+<title>福利姬播放</title>
 <style>
 html, body { margin:0; padding:0; height:100%; overflow:hidden; background:#111; font-family:"Microsoft YaHei",sans-serif; }
 .container { width:100%; height:100%; display:flex; flex-direction:column; text-align:center; box-sizing:border-box; }
@@ -50,7 +50,7 @@ const seriesID = getSeriesFromURL();
 function loadComicData(series){
     return new Promise((resolve, reject)=>{
         const script = document.createElement('script');
-        script.src = `https://yunvgong.com/comics/menu/${series}_comics_data.js`; // 对应你生成的 JS 文件
+        script.src = `https://yunvgong.com/GirlPhoto/menu/${series}_comics_data.js`; // 对应你生成的 JS 文件
         script.onload = () => {
             if(typeof comicData !== 'undefined'){
                 resolve(comicData);
