--- a/GirlPhoto/tag_all/tag_AzurLane.html
+++ b/GirlPhoto/tag_all/tag_AzurLane.html
@@ -34,31 +34,39 @@ body {
     transform:scale(1.05);
     box-shadow:0 4px 12px rgba(255,255,255,.2);
 }
-.card img {
+.card img.cover {
     width:100%;
-    aspect-ratio:2/3; /* 漫画书比例 */
+    aspect-ratio:2/3;
     object-fit:cover;
     border-bottom:1px solid #222;
-}
-.card-type {
-    position:absolute;
-    bottom:8px;
-    right:8px;
-    font-size:12px;
-    font-weight:bold;
-    color:#fff;
-    background:#ff0000;
-    padding:2px 6px;
-    border-radius:4px;
 }
 .actor {
     position:absolute;
     bottom:8px;
     left:8px;
+    display:flex;
+    flex-wrap: wrap;
+    gap:4px;
+}
+.actor a {
+    display:flex;
+    align-items:center;
+    gap:4px;
     background:rgba(0,0,0,0.5);
     padding:2px 6px;
     border-radius:4px;
     font-size:12px;
+    text-decoration:none;
+    color:#ffcc00;
+}
+.actor a:hover {
+    background:rgba(255,255,255,0.2);
+}
+.actor img {
+    width:16px;
+    height:16px;
+    border-radius:50%;
+    object-fit:cover;
 }
 .card-info {
     padding:8px 6px;
@@ -73,14 +81,9 @@ body {
     overflow:hidden;
     flex-direction:column;
 }
-.idcode {
-    color:#ffcc00;
-    font-weight:bold;
-    font-size:12px;
-}
 .title {
     font-size:13px;
-    white-space:normal; /* 允许换行 */
+    white-space:normal;
     overflow:hidden;
     text-overflow:ellipsis;
     flex-grow:0;
@@ -101,7 +104,6 @@ body {
     gap:4px;
 }
 .date::before { content:" "; }
-
 .pagination {
     display:flex;
     justify-content:center;
@@ -128,7 +130,6 @@ body {
     text-align:center;
     border-radius:4px;
 }
-/* 固定 header */
 #header-placeholder {
     position: fixed;
     top: 0;
@@ -145,11 +146,9 @@ body {
 <div class="pagination" id="pagination"></div>
 
 <script>
-/* -------------------------------
-      动态读取最大页数 MAX_PAGE
--------------------------------- */
 let MAX_PAGE = 1;
 
+// 读取 stats.json 获取最大页数
 async function loadMaxPage(){
   try{
     const res = await fetch("https://yunvgong.com/GirlPhoto/tag_all/stats.json");
@@ -158,13 +157,10 @@ async function loadMaxPage(){
   }catch(e){
     console.error("stats.json 加载失败，使用默认 MAX_PAGE = 1");
   }
-
   initPage();
 }
 
-/* -------------------------------
-         主初始化流程
--------------------------------- */
+// 初始化页面
 function initPage(){
   const pageNumber = getPageFromURL();
   renderPagination(pageNumber);
@@ -181,60 +177,36 @@ function initPage(){
   document.body.appendChild(script);
 }
 
-/* -------------------------------
-            Header 载入
--------------------------------- */
-fetch('../header.html') 
-  .then(res => res.text())
-  .then(html => {
-    document.getElementById('header-placeholder').innerHTML = html;
-
-    // ⭐ 手动加载 header.css
-    const link = document.createElement('link');
-    link.rel = 'stylesheet';
-    link.href = '../header.css';
-    document.head.appendChild(link);
-
-    const script = document.createElement('script');
-    script.src = '../header.js';
-    script.onload = () => {
-      if (typeof initHeaderMenu === 'function') initHeaderMenu();
-      if (typeof setActiveMenu === 'function') setActiveMenu('menu-drama');
-    };
-    document.body.appendChild(script);
-  });
-
-fetch('https://yunvgong.com/footer.html')
-  .then(r=>r.text())
-  .then(html=>{
-    const footer=document.createElement('div');
-    footer.innerHTML = html;
-    document.body.appendChild(footer);
-  });
-
-/* -------------------------------
-           功能方法
--------------------------------- */
+// 点击跳转作品播放页
 function goPlay(url){
   localStorage.setItem('dramaScroll', window.scrollY);
   location.href = url;
 }
 
+// 渲染卡片
 function renderAll(data){
   const box = document.getElementById('dramaGrid');
   box.innerHTML = '';
+
   data.forEach(d=>{
-    const a = Array.isArray(d.actress)?d.actress.join("、"):(d.actress||'未知');
+    const actressHtml = Array.isArray(d.actress)
+      ? d.actress.map(a=>{
+          const safeUrl = a.actresses_url || "#";
+          const safeImg = a.img_url || "https://via.placeholder.com/16";
+          return `<a href="${safeUrl}" target="_blank" onclick="event.stopPropagation();">
+                    <img src="${safeImg}" title="${a.name}">${a.name}
+                  </a>`;
+        }).join("")
+      : '未知';
+
     box.innerHTML += `
       <div class="card" onclick="goPlay('${d.title_play_url}')">
         <div style="position:relative;">
-          <img src="${d.cover_url || 'https://via.placeholder.com/320x180?text=No+Cover'}">
-          <div class="actor">${a}</div>
- 
+          <img class="cover" src="${d.cover_url || 'https://via.placeholder.com/320x180?text=No+Cover'}">
+          <div class="actor">${actressHtml}</div>
         </div>
         <div class="card-info">
           <div class="card-info-top">
- 
             <span class="title">${d.title}</span>
           </div>
           <div class="card-info-bottom">
@@ -281,9 +253,7 @@ function changePage(p){
   location.href = `${window.location.pathname}?pages=${p}`;
 }
 
-/* -------------------------------
-        页面启动入口
--------------------------------- */
+// 页面启动
 loadMaxPage();
 </script>
 
