--- a/GirlPhoto/header.html
+++ b/GirlPhoto/header.html
@@ -4,20 +4,15 @@
 <div class="headerbar">
   <div class="logo-wrap">
     <a href="https://yunvgong.com/index.html" class="logo">御女宫</a>
-	<a href="https://yunvgong.com/JAV/index.html" class="logo">御女宫日本AV</a>
+	<a href="https://yunvgong.com/GirlPhoto/all.html" class="logo">福利姬写真</a>
   </div>
 
   <div class="hamburger" id="hamburger">&#9776;</div>
 
   <nav id="navMenu">
-		<a href="/JAV/newAV">最新更新</a>
-		<a href="/JAV/uncensored">日本无码专区</a>
-		<a href="/JAV/censored">日本有码专区</a>
-		<a href="/JAV/FC2">日本FC2</a>
-		<a href="/JAV/actress">日本女优</a>
-		<a href="/JAV/company">A片出品厂</a>
-		<a href="/JAV/tag_all/tag_subtitle" class="bold">标签分类</a>
-		<a href="https://t.me/yunvgongJAV" target="_blank">电报群</a>
+		<a href="/GirlPhoto/all.html">福利姬目录</a>
+		<a href="/GirlPhoto/tag_all/tag_subtitle" class="bold">标签分类</a>
+		<a href="https://t.me/yunvgongGirlPhoto" target="_blank">电报群</a>
   </nav>
 </div>
 
