--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@ const companyList = [
   { company: "日本AV", company_url: "./JAV/index.html", img_url: "https://picture.yoshiclub.xyz/20250327/370cdc51-a89c-421b-ad1f-f06b8551e8bc.jpg" },
   { company: "三级片区", company_url: "./HongKongSex/index.html", img_url: "https://img.cdn202511.com/videos/202509/04/68b8cf11d640eb31dfab4334/cover.jpg" },
   { company: "国产自拍区", company_url: "./CN_SELFIE/index.html", img_url: "	https://img1.souavzy.org/upload/vod/20250222-1/9f47a49d3b647eefca72d4beadb68812.jpg" },
+  { company: "福利姬图集", company_url: "./GirlPhoto/all.html", img_url: "https://image.acg.lol/file/2024/11/08/1-196ba27c4e2511680.jpg" } , 
   { company: "肉番动漫", company_url: "./EcchiAnime/index.html", img_url: "	https://img1.souavzy.org/upload/vod/20250525-1/4200a73244bc099e8d31f88a10ff5320.jpg" }, 
-  { company: "福利姬图集", company_url: "./GirlPhoto/all.html", img_url: "https://image.acg.lol/file/2024/11/08/1-196ba27c4e2511680.jpg" } 
+  { company: "H漫画", company_url: "./comics/all.html", img_url: "https://telegra.ph/file/d98c8967029b9a0ae64f9.jpg" } 
 ];
 
 const container = document.getElementById("companyGrid");
