--- a/comics/header.html
+++ b/comics/header.html
@@ -4,20 +4,17 @@
 <div class="headerbar">
   <div class="logo-wrap">
     <a href="https://yunvgong.com/index.html" class="logo">御女宫</a>
-	<a href="https://yunvgong.com/JAV/index.html" class="logo">御女宫日本AV</a>
+	<a href="https://yunvgong.com/comics/all.html" class="logo">H漫画</a>
   </div>
 
   <div class="hamburger" id="hamburger">&#9776;</div>
 
   <nav id="navMenu">
-		<a href="/JAV/newAV">最新更新</a>
-		<a href="/JAV/uncensored">日本无码专区</a>
-		<a href="/JAV/censored">日本有码专区</a>
-		<a href="/JAV/FC2">日本FC2</a>
-		<a href="/JAV/actress">日本女优</a>
-		<a href="/JAV/company">A片出品厂</a>
-		<a href="/JAV/tag_all/tag_subtitle" class="bold">标签分类</a>
-		<a href="https://t.me/yunvgongJAV" target="_blank">电报群</a>
+		<a href="/comics/all">H漫画全部</a>
+		<a href="/comics/tag_all/tag_color">彩色漫</a>
+		<a href="/comics/tag_all/tag_BlackWhite">黑白漫</a>
+		<a href="/comics/tag_all/tag_subtitle" class="bold">标签分类</a>
+		<a href="https://t.me/yunvgongcomics" target="_blank">电报群</a>
   </nav>
 </div>
 
