--- a/CN_SELFIE/player_template.html
+++ b/CN_SELFIE/player_template.html
@@ -351,6 +351,7 @@ function initPlayer() {
     descriptionEl.textContent = seriesInfo.description || "";
     publishEl.textContent = seriesInfo.publish_date || "";
     categoryEl.textContent = seriesInfo.type || "";
+	document.title = bottomTitle.textContent;
 
     actressGrid.innerHTML = "";
     if(Array.isArray(seriesInfo.actresses)){
